--- a/aboutme/wrr/site-plan-rafting.html
+++ b/aboutme/wrr/site-plan-rafting.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1>LIFE ADVENTURES Site Plan</h1>
+    <h1>LIFE ADVENTURES </h1>
     <h2>Abraham James Watongola</h2>
     <h2>WDD 130-009706127</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
