site plan added

--- a/aboutme/wrr/site-plan-rafting.html
+++ b/aboutme/wrr/site-plan-rafting.html
@@ -77,7 +77,7 @@
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Life adventure, White Water Rafting Company
+      The best Life adventure, Water Rafting Company
       offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
       Springs. Since 1974, we have been family owned and operated, rafting the
       Shoshone section of Glenwood Canyon and beyond.
