--- a/aboutme/wrr/site-plan-rafting.html
+++ b/aboutme/wrr/site-plan-rafting.html
@@ -80,7 +80,7 @@
       The best Life adventure, Water Rafting Company
       offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
       Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      Shoshone section of Glenwood Canyon and beyond. Experience life!
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
