added site plan

--- a/aboutme/wrr/site-plan-rafting.html
+++ b/aboutme/wrr/site-plan-rafting.html
@@ -68,7 +68,7 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: crimson text
+      Heading Font: Crimson text
       <!-- change this -->
     </h4>
     <h4>
