--- a/aboutme/wrr/site-plan-rafting.html
+++ b/aboutme/wrr/site-plan-rafting.html
@@ -75,7 +75,7 @@
       Paragraph Font: Lato
       <!-- change this -->
     </h4>
-    <h3>Normal para example</h3>
+    <h3>Normal paragraph example</h3>
     <p>
       The best Life adventure, Water Rafting Company
       offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
