--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>Life Adventures Site Plan</h1>
+    <h1>White Water Rafting Site Plan</h1>
     <h2>Abraham James Watongola</h2>
-    <h2>WDD 130-[section]</h2>
+    <h2>WDD 130-A5</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -34,7 +34,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/life.jpg" alt="Logo image" height="220" width="160"/>
+    <img src="images/rafting.png" alt="Logo image" height="220" width="160"/>
     <hr />
     <h2>Style Guide</h2>
 
