--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,7 +20,7 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To create a nature human co-dependency that will last for generations <br>
+    <p>To create a nature-human co-dependency that will last for generations <br>
         as we embrace and intertwine conservation, education, research and preservation of a human-nature relationship.</p>
     <!-- change this -->
 
