--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a id="logo_link" href="index.html">
-      <img class="logo" src="images/rafting.png" alt="Dry Oar logo">
+      <img class="logo" src="images/rafting.png" alt="Whitewater Rafting logo">
     </a>
     <nav>
       <a href="index.html">Home</a>
@@ -55,7 +55,7 @@
 
   </main>
   <footer>
-    <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+    <p>Dry Oar &copy; 2022 - Abraham Watongola</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
