--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   </main>
   <footer>
-    <p>Dry Oar &copy; 2022 - Abraham Watongola</p>
+    <p>Dry Oar &copy; 2022 - Abraham James Watongola</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
