--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>Swift Technologies - Site Plan</h1>
+      <h1>Swift Technologies Site Plan</h1>
       <h2>Abraham James Watongola</h2>
       <h2>WDD 130-A5</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
