--- a/portfolio2/portfolio1/site-plan.html
+++ b/portfolio2/portfolio1/site-plan.html
@@ -91,8 +91,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="How Websites Work!">Page2</a>
+        <a href="How we work!">Page3</a>
       </nav>
       <hr>
       <h2>
@@ -103,10 +103,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          How Websites Work! <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          How we work!  <!-- change this -->
         </div>
 
         <div class="top">
@@ -126,33 +126,74 @@
       <h2>
         Content
       </h2>
+      <div class="sm-home">
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        <h1>Need a website? </h1>                                                    <br>
+        Designed beautifully and compatible to different devices.<br>
+        Well organised and wonderfully Written.<br>
+        Thought captivating and intuitive.<br>
+        Quality, Solution, Provision-  Abide with Us @Swift Technologies.
       </p>
+      <b>In a world advancing from an ancient view, modernity with technology makes life, business, education<br> appear at a click, swipe or search.<br> We offer you an opportunity to stand out globally and locally. Wherever you are, you have found us.You too can be found!<br> Services Offered: <br>Domain name creation that suits a quick search.<br>Logo creation to make you stand out<br>Hook Liner to capture thoughts simply<br>Hosting your website for the best experience<br>Optimize your search engine to have you appear easily globally.<br>Top notch content creation <br>
+        <b>Domain name:</b> A domain name is like your home address on the internet. It's how people find your website.<br>Logo creation: A logo is a picture or symbol that represents your website. It should be something that people will remember.<br>Hook liner: A hook liner is a short sentence that gets people interested in reading your content. It's like the title of a book or movie.<br>Hosting a website: Hosting a website is like renting a space on the internet for your website to live.<br>SEO: SEO stands for search engine optimization. It's the process of making your website easier to find in search engines.
+        <br><b>Content creation:</b> Content creation is the process of writing, designing, and developing content for your website. It can include text, images, videos, and more.
+      </p1>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/unsplash4.jpg" alt="image for homepage" height="100px" width="100px">
+        <img src="images/unsplash2.jpg" alt="image for homepage"height="120px" width="100px">
 
       </ul>
-      <h3>[Page 2]</h3>
+    </div>
+    <div class="sm-page2">
+      <h3>How websites work?</h3>
       <p>
-        [Written copy for the Page 2 here]
+        <p><strong>Increase your visibility online:</strong> A well-designed website with high-quality content will help you rank higher in search engine results pages (SERPs), which means more people will be able to find you.                                                        <br></p>
+        <p><strong>Generate leads and sales:</strong> A website can be a great way to generate leads and sales for your business. You can do this by offering free resources, such as ebooks or webinars, or by providing a way for people to contact you directly.<br></p>
+        <p><strong>Build trust and credibility:</strong> A great website can help you build trust and credibility with potential customers. When people see that you have a professional-looking website with high-quality content, they're more likely to do business with you.<br></p>
+        <p><strong>Stand out from the competition:</strong> In today's crowded marketplace, it's more important than ever to stand out from the competition. A great website and great content can help you do just that.<br></p>
+        <p>Here are some additional advantages of having a great website and great content:<br></p>
+        <p><strong>Improve customer service:</strong> A website can be a great way to improve customer service. You can use it to answer frequently asked questions, provide support for your products or services, and collect feedback from customers.<br></p>
+        <p><strong>Increase brand awareness:</strong> A website can help you increase brand awareness by making your business more visible online. When people see your website, they'll start to become familiar with your brand and what you offer.<br></p>
+        <p><strong>Reach a global audience:</strong> A website can help you reach a global audience. With the internet, there are no borders when it comes to doing business. You can reach people all over the world with your website.<br></p>
+        <p>Overall, a <strong></strong>great website and <strong>great content</strong> are a <strong>valuable asset</strong> for any project.</p>
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/unsplash6.jpg" alt="how" height="200px" width="150px">
+        <img src="images/unsplash3.jpg" alt="how websites" height="200px" width="150px">
 
       </ul>
-      <h3>[Page 3]</h3>
+    </div>
+    <div class="sm-page3"></div>
+      <h3>How we work?</h3>
       <p>
-        [Written copy for the Page 3 here]
+        With a highly effective team with the best talents, work is fun for us as we develop different ideas often.
+      </p>
+      <p>
+        <strong>Get In Touch</strong><br>
+        Get in touch with <b>Swift Technologies</b> through our <b>email</b> or <b>whatsapp</b> or <b>call</b> through the contact avenues provided on this platform and all our social pages.<br>
+        Give an in-depth detail of what you need so that we ensure Quality, Solution, Provision to your satisfaction.
+      </p><br>
+
+      <p>
+        <strong>Pay Half the Quote</strong><br>
+        Pay <b>half</b> the fee required for full service. This fee is designed to measure your commitment for the service and is untouched until the project offered is fully completed.
+      </p><br>
+
+      <p><strong>Client Review</strong><br>
+        Assessment of product to make ammends. In case there are additions needed by a client, these are offered at an increasing rate of <b>2%</b> per additional information as determined by assessment team.
+
+      </p><br>
+      <p>
+        <strong>Deliver and offer extra support</strong><br>
+        We deliver your work with a project report and assure you of post project support.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/unsplash1.jpg" alt="image for page3" height="200px" width="100px">
+        <img src="images/pexels.jpg" alt="image for page3" height="200" width="100px">
 
       </ul>
+    </div>
       <hr>
       <h2>
         Wireframes
@@ -166,13 +207,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>How websites work!</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>How we work!</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
