--- a/portfolio2/portfolio1/site-plan.html
+++ b/portfolio2/portfolio1/site-plan.html
@@ -167,7 +167,7 @@
     <div class="sm-page3"></div>
       <h3>How we work?</h3>
       <p>
-        With a highly effective team with the best talents, work is fun for us as we develop different ideas often.
+        With a highly effective team with the best talents, work is fun for us as we develop different ideas often. We offer the best services.
       </p>
       <p>
         <strong>Get In Touch</strong><br>
