--- a/portfolio2/portfolio1/site-plan.html
+++ b/portfolio2/portfolio1/site-plan.html
@@ -164,7 +164,7 @@
 
       </ul>
     </div>
-    <div class="sm-page3"></div>
+    <div class="sm-page3">
       <h3>How we work?</h3>
       <p>
         With a highly effective team with the best talents, work is fun for us as we develop different ideas often. We offer the best services.
