--- a/grid/grid.html
+++ b/grid/grid.html
@@ -8,12 +8,17 @@
     <link rel="stylesheet" href="styles/grid.css">
 </head>
 <body>
-    <div class="grid">
-        <h1 class="catchup">Tart & Sweet</h1>
-        <h2 class="fruit">Cherries</h2>
-        <img class="red" src="images/w06_cherries.png" alt=" Cherries">
-
+    <div class="photo">
+        <imgs  class="p1" src="images/w09_ice_img.jpg" alt=" Bridge".>
     </div>
+
+    <h1> Post Three</h1>
+    <p>
+        Kampala- The home of parties and fun. Visit the pearl and the catchup to life <br>
+        is inevitable. Addiction to a city reveller lifestyle is one to journal and a memory to hold dear.
+        Warning: 'We have six weekends and one work day; Monday.' Get your adrenaline pumped up!
+    </p>
+        
     
 </body>
 </html>
