--- a/portfolio2/portfolio1/site-plan.html
+++ b/portfolio2/portfolio1/site-plan.html
@@ -199,7 +199,12 @@
         Wireframes
       </h2>
       <p>
-        Create three wireframes for your site. One for each page and list them here</p>
+        <img src="images/wireframe1.png" alt="wireframe Home page" height="500px" width="400px">
+        <img src="images/wireframe2.png" alt="wireframe subpage" height="500px" width="400px">
+        <img src="images/wireframe3.png" alt="wireframe final page" height="500px" width="400px">
+
+
+      </p>
 
       <h3>Home</h3>
       <p>         
