wireframes to positions

--- a/portfolio2/portfolio1/site-plan.html
+++ b/portfolio2/portfolio1/site-plan.html
@@ -210,19 +210,20 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/wireframe1.png"  alt="home page wireframe" height="500px" width="400px">
 
       <h3>How websites work!</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/wireframe2.png" alt="page 2 wireframe" height="500px" width="400px">
+      alt="page 2 wireframe">
 
       <h3>How we work!</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/wireframe3.png" alt="page 3 wireframe" height="500px" width="400px">
     </main>
   </body>
 
