--- a/portfolio2/portfolio1/site-plan.html
+++ b/portfolio2/portfolio1/site-plan.html
@@ -90,9 +90,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="How Websites Work!">Page2</a>
-        <a href="How we work!">Page3</a>
+        <a href="Home">Home</a>
+        <a href="How Websites Work!">How Websites work!</a>
+        <a href="How we work!">How we work!</a>
       </nav>
       <hr>
       <h2>
