--- a/kaana/kaana-site.html
+++ b/kaana/kaana-site.html
@@ -5,12 +5,12 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="styles/kaana.css">
   </head>
 
   <body>
     <header>
-      <h1>Swift Technologies Site Plan</h1>
+      <h1>Abraham James Watongola</h1>
       <h2>Abraham James Watongola</h2>
       <h2>WDD 130-A5</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
@@ -34,7 +34,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/logo.png" alt="Logo image">
+      <img src="" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -90,9 +90,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="homepage.html">Home</a>
-        <a href="subpage.html">Purpose</a>
-        <a href="operation.html">Operation</a>
+        <a href="About Me">About me</a>
+        <a href="Projects">Projects</a>
+        <a href="Procedure">Procedure</a>
       </nav>
       <hr>
       <h2>
@@ -100,13 +100,13 @@
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          Home
+          About me
         </div>
         <div class="sm-page2">
-          Purpose <!-- change this -->
+          Projects <!-- change this -->
         </div>
         <div class="sm-page3">
-          Operation  <!-- change this -->
+          Procedure <!-- change this -->
         </div>
 
         <div class="top">
@@ -127,29 +127,18 @@
         Content
       </h2>
       <div class="sm-home">
-      <h3>Home page</h3>
-      <p>
-        <h1>Need a website? </h1>                                                    <br>
-        *Designed beautifully and compatible to different devices.<br>
-        *Well organised and wonderfully Written.<br>
-        *Thought captivating and intuitive.<br>
-        Quality, Solution, Provision-  Abide with Us @Swift Technologies.
-      </p>
-      <b>In a world advancing from an ancient view, modernity with technology makes life, business, education<br> appear at a click, swipe or search.<br> We offer you an opportunity to stand out globally and locally. Wherever you are, you have found us.You too can be found!<br> Services Offered: <br>Domain name creation that suits a quick search.<br>Logo creation to make you stand out<br>Hook Liner to capture thoughts simply<br>Hosting your website for the best experience<br>Optimize your search engine to have you appear easily globally.<br>Top notch content creation <br>
-        <b>Domain name:</b> A domain name is like your home address on the internet. It's how people find your website.<br>Logo creation: A logo is a picture or symbol that represents your website. It should be something that people will remember.<br>Hook liner: A hook liner is a short sentence that gets people interested in reading your content. It's like the title of a book or movie.<br>Hosting a website: Hosting a website is like renting a space on the internet for your website to live.<br>SEO: SEO stands for search engine optimization. It's the process of making your website easier to find in search engines.
-        <br><b>Content creation:</b> Content creation is the process of writing, designing, and developing content for your website. It can include text, images, videos, and more.
-      </p1>
+      <h3>About me</h3>
+      <>
+        <h1>About Me </h1>                                                   
+      
       <p>Images for the Home page</p>
-        <img src="images/domain.png" alt="image for homepage" height="100px" width="100px">
-        <img src="images/brandlogo.png" alt="image for homepage"height="120px" width="100px">
-        <img src="images/webhost.png" alt=""height="100" width="100px">
-        <img src="images/seo.png" alt="" height="100" width="100px">
-        <img src="images/content.png" alt="" height="100" width="100px">
-        <img src="images/sm.png" alt="" height="100" width="100px">
+        <img src="images/unsplash4.jpg" alt="image for homepage" height="100px" width="100px">
+        <img src="images/unsplash2.jpg" alt="image for homepage"height="120px" width="100px">
+
       </ul>
     </div>
     <div class="sm-page2">
-      <h3>Purpose</h3>
+      <h3>Projects</h3>
       <p>
         <p><strong>Increase your visibility online:</strong> A well-designed website with high-quality content will help you rank higher in search engine results pages (SERPs), which means more people will be able to find you.                                                        <br></p>
         <p><strong>Generate leads and sales:</strong> A website can be a great way to generate leads and sales for your business. You can do this by offering free resources, such as ebooks or webinars, or by providing a way for people to contact you directly.<br></p>
@@ -168,7 +157,7 @@
       </ul>
     </div>
     <div class="sm-page3">
-      <h3>Operation</h3>
+      <h3>Procedure</h3>
       <p>
         With a highly effective team with the best talents, work is fun for us as we develop different ideas often. We offer the best services.
       </p>
@@ -192,11 +181,9 @@
         We deliver your work with a project report and assure you of post project support.
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/hand.png" alt="image for page3" height="200px" width="100px">
-        <img src="images/1.png" alt="image for page3" height="200" width="100px">
-        <img src="images/2.png" alt="image for page3" height="200" width="100px">
-        <img src="images/3.png" alt="image for page3" height="200" width="100px">
-        
+        <img src="images/unsplash1.jpg" alt="image for page3" height="200px" width="100px">
+        <img src="images/pexels.jpg" alt="image for page3" height="200" width="100px">
+
       </ul>
     </div>
       <hr>
@@ -208,20 +195,19 @@
 
       </p>
 
-      <h3>Home</h3>
+      <h3>About me</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="images/wireframe1.png"  alt="home page wireframe" height="500px" width="400px">
+      <img src="images/wireframe1.png"  alt="home page" height="500px" width="400px">
 
-      <h3>Purpose</h3>
+      <h3>Projects</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="images/wireframe2.png" alt="page 2 wireframe" height="500px" width="400px">
-      alt="page 2 wireframe">
 
-      <h3>Deal</h3>
+      <h3>Procedure</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
