--- a/portfolio2/portfolio1/homepage.html
+++ b/portfolio2/portfolio1/homepage.html
@@ -16,7 +16,7 @@
        <div id="content">
             <a id="logo_link" href="homepage.html">
                 <img src="images/logo.png" alt="logo" width="100px" height="100px">
-                <h>Swift Technologies</h>
+                <h3>Swift Technologies</h3>
             </a>
             <nav>
                 <a href="homepage.html">Home</a>
