--- a/portfolio2/portfolio1/homepage.html
+++ b/portfolio2/portfolio1/homepage.html
@@ -8,12 +8,7 @@
 </head>
 <body>
     <header>
-
-
-       <div class="background">
-               <img src="images/home1.jpg" alt=" background">
-       </div>
-       <div id="content">
+        <div id="content">
             <a id="logo_link" href="homepage.html">
                 <img src="images/logo.png" alt="logo" width="100px" height="100px">
                 <h3>Swift Technologies</h3>
@@ -25,51 +20,48 @@
             </nav>
         </div>
     </header>
-        
-        <!--background photo,punchline, photos for services provided-->
-        <section id="hook">
-            <h1>Need a website?</h1><!--hookup statement/punchline-->
-            <p>*Designed beautifully and compatible to different 
-                devices.<br>*Well organised and wonderfully Written.
-                <br>*Thought captivating and intuitive.<br>Quality, Solution, Provision-  Abide with Us @Swift Technologies.</p><!--needed services-->
-        </section>
-    </div>
     <main class="services">
+        <section id="hook">
+            <h1>Need a website?</h1>
+            <p>*Designed beautifully and compatible with different devices.<br>
+               *Well organized and wonderfully written.<br>
+               *Thought captivating and intuitive.<br>
+               Quality, Solution, Provision - Abide with Us @Swift Technologies.
+            </p>
+        </section>
         <div class="services">
-            <div id="x">
-                <img src="images/domain.png" height="120px" width="120px"   alt="domain">
-                <h4>Domain</h4><!--explanation or naming of images-->
+            <div class="service-item">
+                <img src="images/domain.png" height="120px" width="120px" alt="domain">
+                <h4>Domain</h4>
             </div>
-            <div id="x">
-                <img  src="images/brandlogo.png" height="120px" width="120px" alt="logos">
-                <h4>Logo creation</h4><!--explanation or naming of images-->
+            <div class="service-item">
+                <img src="images/brandlogo.png" height="120px" width="120px" alt="logos">
+                <h4>Logo creation</h4>
             </div>
-            <div id="x">
+            <div class="service-item">
                 <img src="images/webhost.png" height="120px" width="120px" alt="hosting">
-                <h4>Web hosting</h4><!--explanation or naming of images-->
+                <h4>Web hosting</h4>
             </div>
-            <div id="x">
+            <div class="service-item">
                 <img src="images/seo.png" height="120px" width="120px" alt="">
-                <h4>SEO</h4><!--explanation or naming of images-->
+                <h4>SEO</h4>
             </div>
-            <div id="x">
+            <div class="service-item">
                 <img src="images/content.png" height="120px" width="120px" alt="">
-                <h4>Content creation</h4><!--explanation or naming of images-->
+                <h4>Content creation</h4>
             </div>
-            <div id="x">
+            <div class="service-item">
                 <img src="images/sm.png" height="120px" width="120px" alt="">
-                <h4>Media Marketing</h4><!--explanation or naming of images-->
+                <h4>Media Marketing</h4>
             </div>
-        <section id="snitch">
-            <h2> Sneak peek</h2>
-            <p><b>In a world advancing from an ancient view, modernity with technology makes life, business, education<br> appear at a click, swipe or search.<br> We offer you an opportunity to stand out globally and locally. Wherever you are, you have found us.You too can be found!<br>
-                <div class="topic">Services Offered:
-                 <br><b>|  Hosting your website </b><b>| Optimize you search |</b>
-                <b> Domain name </b>| Logo creation |<b> Hook line |</b><b> Hosting a website |</b><b> SEO |</b><b>Content creation</b></p>
         </div>
-    </div>
-    </section>
-
+        <section id="snitch">
+            <h2>Sneak peek</h2>
+            <p><b>In a world advancing from an ancient view, modernity with technology makes life, business, education<br> appear at a click, swipe or search.<br> We offer you an opportunity to stand out globally and locally. Wherever you are, you have found us. You too can be found!</b><br>
+                <div class="topic">Services Offered:
+                 <br><b>| Hosting your website | Optimize your search | Domain name | Logo creation | Hook line | Hosting a website | SEO | Content creation</b></div>
+            </p>
+        </section>
     </main>
     <footer>
         <p>Swift technologies &copy; 2023</p>
@@ -86,7 +78,6 @@
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
-
-    </footer>   
+    </footer>
 </body>
 </html>
