--- a/portfolio2/portfolio1/homepage.html
+++ b/portfolio2/portfolio1/homepage.html
@@ -22,7 +22,9 @@
         </div>
     </header>
     <main class="services">
-        <div id="background"><img src="images/home.jpg" width="100%" height="100vh"></div>
+        <div id="background">
+            <img src="images/home.jpg" width="100%" height="100vh">
+        </div>
         
         <section id="hook">
             <h1>Need a website?</h1>
