home and subpage

--- a/portfolio2/portfolio1/subpage.html
+++ b/portfolio2/portfolio1/subpage.html
@@ -9,11 +9,10 @@
 <body>
     <header>
         <div id="content">
-            <a id="logo_link" href="homepage.html">
-                <img src="images/logo.png" alt="logo" width="100px" height="100px">
-                <h3>Swift Technologies</h3>
-            </a>
             <nav>
+                <a id="logo_link" href="homepage.html">
+                    <img src="images/logo.png" alt="logo" width="100" height="100">
+                </a>
                 <a href="homepage.html">Home</a>
                 <a href="subpage.html">Purpose</a>
                 <a href="operation.html">Operation</a>
@@ -21,36 +20,44 @@
         </div>
     </header>
     <main>
-        <div id="single">
-            <img src="images/unsplash6.jpg" width="280px" height="800px" alt="">
-        </div>
-        <h1>PURPOSES OF WEBSITES</h1>
-        <div class="fine">
-            <p><strong><span class="more">Increase your visibility online:</span></strong> A well-designed website with high-quality content will help you rank higher in search engine results pages (SERPs), which means more people will be able to find you.</p>
-            <p><strong><span class="more">Generate leads and sales:</span></strong> A website can be a great way to generate leads and sales for your business. You can do this by offering free resources, such as ebooks or webinars, or by providing a way for people to contact you directly.</p>
-            <p><strong><span class="more">Build trust and credibility:</span></strong> A great website can help you build trust and credibility with potential customers. When people see that you have a professional-looking website with high-quality content, they're more likely to do business with you.</p>
-            <p><strong><span class="more">Stand out from the competition:</span></strong> In today's crowded marketplace, it's more important than ever to stand out from the competition. A great website and great content can help you do just that.</p>
-            <p><span class="more">Here are some additional advantages of having a great website and great content:</span></p>
-            <p><span class="more">Improve customer service:</span> A website can be a great way to improve customer service. You can use it to answer frequently asked questions, provide support for your products or services, and collect feedback from customers.</p>
-            <p><strong><span class="more">Increase brand awareness:</span></strong> A website can help you increase brand awareness by making your business more visible online. When people see your website, they'll start to become familiar with your brand and what you offer.</p>
-            <p><strong><span class="more">Reach a global audience:</span></strong> A website can help you reach a global audience. With the internet, there are no borders when it comes to doing business. You can reach people all over the world with your website.</p>
-            <p><span class="lastly">Overall, a <strong>great website</strong> and <strong>great content</strong> are a <strong>valuable asset</strong> for any project.</span></p>
+        <div id="bod">
+            <div id="background">
+                <img src="images/home.jpg" width="100" height="100" alt="">
+            </div>
+            <div id="single">
+                <img src="images/unsplash6.jpg" width="250" height="700" alt="">
+            </div>
+            <div class="fine">
+                <h1>PURPOSES OF WEBSITES</h1>
+                <p><strong><span class="more">Increase your visibility online:</span></strong><br>A well-designed website with high-quality content will help you rank higher in search engine results pages (SERPs), which means more people will be able to find you.</p>
+                <p><strong><span class="more">Generate leads and sales:</span></strong><br>A website can be a great way to generate leads and sales for your business. You can do this by offering free resources, such as ebooks or webinars, or by providing a way for people to contact you directly.</p>
+                <p><strong><span class="more">Build trust and credibility:</span></strong><br>A great website can help you build trust and credibility with potential customers. When people see that you have a professional-looking website with high-quality content, they're more likely to do business with you.</p>
+                <p><strong><span class="more">Stand out from the competition:</span></strong><br>In today's crowded marketplace, it's more important than ever to stand out from the competition. A great website and great content can help you do just that.</p>
+                <p><span class="more">Here are some additional advantages of having a great website and great content:</span></p>
+                <p><span class="more">Improve customer service:</span><br>A website can be a great way to improve customer service. You can use it to answer frequently asked questions, provide support for your products or services, and collect feedback from customers.</p>
+                <p><strong><span class="more">Increase brand awareness:</span></strong><br>A website can help you increase brand awareness by making your business more visible online. When people see your website, they'll start to become familiar with your brand and what you offer.</p>
+                <p><strong><span class="more">Reach a global audience:</span></strong><br>A website can help you reach a global audience. With the internet, there are no borders when it comes to doing business. You can reach people all over the world with your website.</p>
+                <p><span class="lastly">Overall, a <strong>great website</strong> and <strong>great content</strong> are a <strong>valuable asset</strong> for any project.</span></p>
+            </div>
         </div>
     </main>
+
     <footer>
-        <p>Swift technologies &copy; 2023</p>
-        <p><a href="site-plan.html">Site plan</a></p>
-        <p><a href="contact.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="facebook icon">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
+            <p>Swift technologies &copy; 2023</p>
+            <p><a href="site-plan.html">Site plan</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
+            <div id="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="facebook icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
         </div>
     </footer>
 </body>
