--- a/portfolio2/portfolio1/contact.html
+++ b/portfolio2/portfolio1/contact.html
@@ -20,12 +20,21 @@
             </nav>
         </div>
     </header>
-    
+    <main>
+        <div id="background">
+            <img src="images/home.jpg" width="100%" height="100vh">
+        </div>
+    </main>
     <footer>
-        <p>Swift technologies &copy; 2023</p>
-        <p><a href="site-plan.html">Site plan</a></p>
-        <p><a href="contact.html">Contact Us</a></p>
+
         <div class="social">
+
+            <p>Swift technologies &copy; 2023</p>
+            <p><a href="site-plan.html">Site plan</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
+
+        
+            <div id="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="facebook icon">
             </a>
@@ -35,6 +44,7 @@
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
+            </div>
         </div>
     </footer>
 </body>
