--- a/portfolio2/portfolio1/contact.html
+++ b/portfolio2/portfolio1/contact.html
@@ -8,42 +8,74 @@
 </head>
 <body>
     <header>
-       <div id="content">
-            <a id="logo_link" href="homepage.html">
-                <img src="images/logo.png" alt="logo" width="100px" height="100px">
-                <h3>Swift Technologies</h3>
-            </a>
+        <div id="content">
             <nav>
-                <a href="homepage.html">Home</a>
-                <a href="subpage.html">Purpose</a>
-                <a href="operation.html">Operation</a>
+                <a id="logo_link" href="homepage.html">
+                    <img src="images/logo.png" alt="logo" width="100" height="100">
+                </a>
+                <nav>
+                    <a href="homepage.html">Home</a>
+                    <a href="subpage.html">Purpose</a>
+                    <a href="operation.html">Operation</a>
+                </nav>
             </nav>
         </div>
     </header>
-    <main>
-        <div id="background">
-            <img src="images/home.jpg" width="100%" height="100vh">
+
+    <div class="dropdown">
+        <button class="dropbtn">Projects</button>
+        <div class="dropdown-content">
+            <a href="websites.html">websites</a>
+            <a href="logos.html">logos</a>
+            <a href="content.html">content creation</a>
+            <a href="Web-hosting">Hosting</a>
+            <a href="Digital">Digital Marketing</a>
         </div>
+    </div>
+
+    <main class="services">
+        <div id="background">
+            <img src="images/home.jpg" width="100" height="100" alt="background image">
+        </div>
+        <div id="Feedback"></div>
+
+        <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+            <div class="name">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="email">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="Project">
+                <label for="subject">Project:</label>
+                <input type="text" id="subject" name="subject" required>
+            </div>
+            <div class="Detail">
+                <label for="message">Detail:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit">Send Message</button>
+        </form>
     </main>
+
     <footer>
-
         <div class="social">
-
-            <p>Swift technologies &copy; 2023</p>
+            <p>Swift technologies &copy;2023</p>
             <p><a href="site-plan.html">Site plan</a></p>
             <p><a href="contact.html">Contact Us</a></p>
-
         
             <div id="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="facebook icon">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="facebook icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
             </div>
         </div>
     </footer>
